- version number bump - css fix for weird spacing

--- a/src/_assets/btt/css/main.scss
+++ b/src/_assets/btt/css/main.scss
@@ -62,7 +62,7 @@ sup {
 
 .search {
     height: 100vh;
-    margin-bottom: 145px;
+    margin-bottom: 0;
     padding-top: 0;
     position: relative;
 
